# rins

./: .gitignore  CMakeLists.txt  README.md  frames.gv  nohup.out  package.xml  setup.py
images/Screenshots/: Cyllinders
launch/: amcl_demo.launch  cyllinder.launch  detector.launch  example.launch  master.launch  nodes.launch  task3.launch  test.launch
map/: map.pgm  map2.pgm  newmap.yaml  newmap_clean.pgm  newmap_clean2.pgm  newmap_extreme.pgm
map/NewMap Backup/: newmap.pgm  newmap_clean.pgm  newmap_extreme.pgm
msg/: StampedString.msg
recog/: mm.mat  ms.mat  mu.mat  test.py  v.mat
rviz config/: config.rviz  config.rviz.orig
scripts/: .goutputstream-MMMIXX  .goutputstream-UQOIXX  clusters.py  costmap_approach.py  crumbs.py  cyllinder_detector.py  drive.py  drive2.py  drive3.py  drive_other.py  faces.py  logic.py  master_driver.py  newClustering.py  recognizer.py  save_image.py  test.py
src/: detect.cpp  example.cpp
